- mailer order, pendaftaran, pendaftaran diterima - mailer akun - minor fix (ui)

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME='BADKO TKA-TPA Rayon Kasihan'
 APP_ENV=local
 APP_KEY=base64:s+VexguYiijVzR7LsAIVSB0G8ss0oyr9xpAPwSuOb+w=
 APP_DEBUG=true
@@ -29,13 +29,23 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME="badkorayonkasihan@gmail.com"
+MAIL_PASSWORD="ztmf yycb btgg uple"
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS="badkorayonkasihan@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+
+# MAIL_MAILER=smtp
+# MAIL_HOST=mailpit
+# MAIL_PORT=1025
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
+# MAIL_ENCRYPTION=null
+# MAIL_FROM_ADDRESS="hello@example.com"
+# MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
